po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-07 13:31+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-04-11 03:17+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -285,7 +285,7 @@ msgstr "Alle groepen"
 
 #: CRM/ACL/Form/ACL.php CRM/ACL/Page/ACL.php
 msgid "All Custom Groups"
-msgstr "Alle Specifieke Groepen"
+msgstr "Alle specifieke groepen"
 
 #: CRM/ACL/Form/ACL.php CRM/ACL/Page/ACL.php
 msgid "All Profiles"
@@ -1435,7 +1435,7 @@ msgstr "Contact activiteiten"
 #: CRM/Activity/Page/Tab.php CRM/Contact/Page/Inline/Actions.php
 #: CRM/Contact/Page/View/Summary.php
 msgid "Activity Links"
-msgstr "Activiteit Koppelingen"
+msgstr "Activiteitkoppelingen"
 
 #: CRM/Activity/Page/Tab.php
 msgid "Activity Record"
@@ -2435,7 +2435,7 @@ msgstr "Type groep"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Group Cache Date"
-msgstr "Groep Cache Datum"
+msgstr "Cachedatum groep"
 
 #: CRM/Contact/DAO/Group.php
 msgid "Next Group Refresh Time"
@@ -2546,23 +2546,23 @@ msgstr "Contact B heeft rechten over Contact A"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Relationship Case ID"
-msgstr "Relatieschap Dossier ID"
+msgstr "Dossier-ID relatie"
 
 #: CRM/Contact/DAO/RelationshipType.php
 msgid "Relationship Type Name A to B"
-msgstr "Relatieschaptype Naam A naar B"
+msgstr "Naam relatietype A naar B"
 
 #: CRM/Contact/DAO/RelationshipType.php
 msgid "Relationship Type Label A to B"
-msgstr "Relatieschaptype Label A naar B"
+msgstr "Label relatietype A naar B"
 
 #: CRM/Contact/DAO/RelationshipType.php
 msgid "Relationship Type Name B to A"
-msgstr "Relatieschaptype Naam B naar A"
+msgstr "Naam relatietype B naar A"
 
 #: CRM/Contact/DAO/RelationshipType.php
 msgid "Relationship Type Label B to A"
-msgstr "Relatieschaptype Label B naar A"
+msgstr "Label relatietype B naar A"
 
 #: CRM/Contact/DAO/RelationshipType.php
 msgid "Contact Type for Contact A"
@@ -2582,11 +2582,11 @@ msgstr "Contactsubtype B"
 
 #: CRM/Contact/DAO/RelationshipType.php
 msgid "Relationship Type is Reserved"
-msgstr "Relatieschaptype is gereserveerd"
+msgstr "Relatietype is gereserveerd"
 
 #: CRM/Contact/DAO/RelationshipType.php
 msgid "Relationship Type is Active"
-msgstr "Relatieschaptype is actief"
+msgstr "Relatietype is actief"
 
 #: CRM/Contact/DAO/RelationshipType.php CRM/Contact/Import/Form/DataSource.php
 #: CRM/Dedupe/DAO/RuleGroup.php CRM/UF/Page/ProfileEditor.php
@@ -2682,7 +2682,7 @@ msgstr "%1 bewerken"
 #: CRM/Contact/Form/Contact.php
 #: templates/CRM/Contact/Page/Inline/ContactName.tpl
 msgid "default organization"
-msgstr "standaard organisatie"
+msgstr "standaard-organisatie"
 
 #: CRM/Contact/Form/Contact.php CRM/Contact/Form/RelatedContact.php
 msgid "Could not get a contact_id and/or contact_type"
@@ -2989,7 +2989,7 @@ msgstr "Toevoeging postcode"
 #: CRM/Contact/Form/Test.php CRM/Contact/Import/Parser/Contact.php
 #: CRM/Core/Form.php CRM/Core/Payment/Form.php xml/templates/civicrm_data.tpl
 msgid "State / Province"
-msgstr "Staat / Provincie"
+msgstr "Staat / provincie"
 
 #: CRM/Contact/Form/Edit/Address.php xml/templates/civicrm_data.tpl
 msgid "Latitude"
@@ -3214,7 +3214,7 @@ msgstr "Er moet een e-mailadres als primair worden opgegeven."
 
 #: CRM/Contact/Form/Inline/Email.php
 msgid "Only one email can be marked as primary."
-msgstr "Er kan maar 1 e-mailadres als primair worden opgegeven."
+msgstr "Er kan maar 1 e-mailadres als primair worden gemarkeerd."
 
 #: CRM/Contact/Form/Inline/IM.php
 msgid "One IM should be marked as primary."
@@ -3526,7 +3526,7 @@ msgstr "Groepen"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Group Types"
-msgstr "Groep types"
+msgstr "Groepstypes"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Include tags used for %1"
@@ -3604,7 +3604,7 @@ msgstr "Bijvoegen op basis van privacy optie(s)"
 #: CRM/Contact/Form/Search/Criteria.php
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid "Privacy Options"
-msgstr "Privacy Opties"
+msgstr "Privacy-opties"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Email On Hold"
@@ -3625,7 +3625,7 @@ msgstr "Telefoon Locatie"
 #: templates/CRM/Contact/Form/Edit/Phone.tpl
 #: templates/CRM/Contact/Form/Inline/Phone.tpl xml/templates/civicrm_data.tpl
 msgid "Phone Type"
-msgstr "Type telefoon"
+msgstr "Telefoontype"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Range-From"
@@ -3717,7 +3717,7 @@ msgstr "Overleden"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Body Only"
-msgstr "Alleen body"
+msgstr "Alleen berichtinhoud"
 
 #: CRM/Contact/Form/Search/Criteria.php
 msgid "Subject Only"
@@ -3972,7 +3972,7 @@ msgstr "Deelnemer"
 
 #: CRM/Contact/Form/Search/Custom/EventAggregate.php
 msgid "Only show Credit Card Payments"
-msgstr "Alleen betalingen met creditcard tonen"
+msgstr "Alleen creditcard-betalingen tonen"
 
 #: CRM/Contact/Form/Search/Custom/EventAggregate.php
 msgid "Show payees"
@@ -4015,7 +4015,7 @@ msgstr "Naam kenmerk"
 
 #: CRM/Contact/Form/Search/Custom/Group.php xml/templates/civicrm_data.tpl
 msgid "Include / Exclude Search"
-msgstr "Inclusief / Exclusief Zoeken"
+msgstr "Inclusief / exclusief zoeken"
 
 #: CRM/Contact/Form/Search/Custom/Group.php
 msgid ""
@@ -4313,7 +4313,7 @@ msgstr "Verwijderd '%1'"
 
 #: CRM/Contact/Form/Task/AlterPreferences.php
 msgid "%1 Contacts Updated"
-msgstr "%1 Contacten gewijzigd"
+msgstr "%1 contacten gewijzigd"
 
 #: CRM/Contact/Form/Task/AlterPreferences.php
 msgid "%1 Updated"
@@ -5554,7 +5554,7 @@ msgstr "Evenementtype"
 
 #: CRM/Core/BAO/ActionSchedule.php
 msgid "Event Template"
-msgstr "Evenement sjabloon"
+msgstr "Evenementsjabloon"
 
 #: CRM/Core/BAO/ActionSchedule.php CRM/Core/BAO/LabelFormat.php
 #: CRM/Core/BAO/PaperSize.php CRM/Core/BAO/PdfFormat.php
@@ -5656,11 +5656,11 @@ msgstr "Mappen en Resource URLs zijn gewijzigd in de verplaatste database met de
 
 #: CRM/Core/BAO/ConfigSetting.php
 msgid "Template cache and upload directory have been cleared."
-msgstr "Template cache en upload folder zijn leeggemaakt."
+msgstr "Sjabloon-cache en upload-map geleegd."
 
 #: CRM/Core/BAO/ConfigSetting.php
 msgid "Database cache tables cleared."
-msgstr "Drupal cache tabellen zijn leeggemaakt."
+msgstr "Database-cache geleegd."
 
 #: CRM/Core/BAO/ConfigSetting.php
 msgid "Drupal session table cleared."
@@ -6501,11 +6501,11 @@ msgstr "Lijst ontvangers"
 
 #: CRM/Core/DAO/ActionSchedule.php
 msgid "Body Text"
-msgstr "Hoofdtekst (platte tekst)"
+msgstr "Berichtinhoud (platte tekst)"
 
 #: CRM/Core/DAO/ActionSchedule.php
 msgid "Body Html"
-msgstr "Hoofdtekst (html)"
+msgstr "Berichtinhoud (HTML)"
 
 #: CRM/Core/DAO/ActionSchedule.php
 msgid "Absolute Date"
@@ -7403,15 +7403,15 @@ msgstr "Vervangen van woord is actief"
 
 #: CRM/Core/DAO/WordReplacement.php
 msgid "Match Type"
-msgstr "Gelijk type"
+msgstr "Matchtype"
 
 #: CRM/Core/DAO/WordReplacement.php
 msgid "wildcardMatch"
-msgstr "Gelijk met wildcard"
+msgstr "Met wildcard"
 
 #: CRM/Core/DAO/WordReplacement.php
 msgid "exactMatch"
-msgstr "Gelijk"
+msgstr "Exacte match"
 
 #: CRM/Core/Error.php
 msgid "Payment Processor Error message"
@@ -8838,19 +8838,19 @@ msgstr "Checksum"
 
 #: CRM/Core/SelectValues.php
 msgid "mm/dd/yyyy (12/31/2009)"
-msgstr "mm/dd/yyyy (12/31/2011)"
+msgstr "mm/dd/jjjj (12/31/2009)"
 
 #: CRM/Core/SelectValues.php
 msgid "dd/mm/yyyy (31/12/2009)"
-msgstr "dd/mm/jjjj (31/12/2011)"
+msgstr "dd/mm/jjjj (31/12/2009)"
 
 #: CRM/Core/SelectValues.php
 msgid "yyyy-mm-dd (2009-12-31)"
-msgstr "yyyy-mm-dd (2011-12-31)"
+msgstr "jjjj-mm-dd (2009-12-31)"
 
 #: CRM/Core/SelectValues.php
 msgid "dd-mm-yyyy (31-12-2009)"
-msgstr "dd-mm-yyyy (31-12-2011)"
+msgstr "dd-mm-jjjj (31-12-2009)"
 
 #: CRM/Core/SelectValues.php
 msgid "dd.mm.yyyy (31.12.2009)"
@@ -8858,23 +8858,23 @@ msgstr "dd.mm.yyyy (31.12.2009)"
 
 #: CRM/Core/SelectValues.php
 msgid "M d, yyyy (Dec 31, 2009)"
-msgstr "M d, yyyy (Dec 31, 2011)"
+msgstr "M d, jjjj (Dec 31, 2009)"
 
 #: CRM/Core/SelectValues.php
 msgid "d M yyyy (31 Dec 2009)"
-msgstr "d M yyyy (31 Dec 2011"
+msgstr "d M jjjj (31 Dec 2009)"
 
 #: CRM/Core/SelectValues.php
 msgid "MM d, yyyy (December 31, 2009)"
-msgstr "MM d, yyyy (December 31, 2011)"
+msgstr "MM d, jjjj (December 31, 2009)"
 
 #: CRM/Core/SelectValues.php
 msgid "d MM yyyy (31 December 2009)"
-msgstr "d MM yyyy (31 December 2011)"
+msgstr "d MM jjjj (31 December 2009)"
 
 #: CRM/Core/SelectValues.php
 msgid "DD, d MM yyyy (Thursday, 31 December 2009)"
-msgstr "DD, d MM yyyy (Donderdag, 31 December 2011"
+msgstr "DD, d MM jjjj (Donderdag, 31 December 2009)"
 
 #: CRM/Core/SelectValues.php
 msgid "mm/dd (12/31)"
@@ -8886,15 +8886,15 @@ msgstr "dag-maand (31-12)"
 
 #: CRM/Core/SelectValues.php
 msgid "yyyy-mm (2009-12)"
-msgstr "yyyy-mm (2011-12)"
+msgstr "jjjj-mm (2009-12)"
 
 #: CRM/Core/SelectValues.php
 msgid "M yyyy (Dec 2009)"
-msgstr "M yyyy (Dec 2011)"
+msgstr "M jjjj (Dec 2009)"
 
 #: CRM/Core/SelectValues.php
 msgid "yyyy (2009)"
-msgstr "yyyy (2011)"
+msgstr "jjjj (2009)"
 
 #: CRM/Core/SelectValues.php
 msgid "12 Hours"
@@ -10660,7 +10660,7 @@ msgstr "Uw bulk SMS is opgeslagen"
 
 #: CRM/SMS/Form/Group.php
 msgid "Select Recipients"
-msgstr "Selecteer Ontvangers"
+msgstr "Selecteer ontvangers"
 
 #: CRM/SMS/Form/Group.php
 msgid "Cannot have same groups in Include Group(s) and Exclude Group(s)."
@@ -10676,7 +10676,7 @@ msgstr "Beheer SMS Providers"
 
 #: CRM/SMS/Form/Provider.php
 msgid "This Title already exists in Database."
-msgstr "De titel is al bekend."
+msgstr "Deze titel bestaat al in de database."
 
 #: CRM/SMS/Form/Provider.php
 msgid "API Type"
@@ -10704,7 +10704,7 @@ msgstr "De geselecteerde provider is verwijderd."
 
 #: CRM/SMS/Form/Schedule.php
 msgid "Schedule SMS"
-msgstr "Inplannen SMS"
+msgstr "SMS inplannen"
 
 #: CRM/SMS/Form/Schedule.php
 msgid "Send Immediately"
@@ -10712,7 +10712,7 @@ msgstr "Onmiddellijk versturen"
 
 #: CRM/SMS/Form/Schedule.php
 msgid "Submit Mass SMS"
-msgstr "Verstuur bulk SMS "
+msgstr "Bulk-SMS versturen"
 
 #: CRM/SMS/Form/Schedule.php
 msgid "Continue Later"
@@ -10817,7 +10817,7 @@ msgstr "Provider uitschakelen"
 
 #: CRM/SMS/Page/Provider.php
 msgid "Settings - SMS Provider"
-msgstr "Instellingen SMS provider"
+msgstr "Instellingen SMS-provider"
 
 #: CRM/Tag/Form/Tag.php
 msgid "Update Tags"
@@ -11287,7 +11287,7 @@ msgstr "Instellingen"
 
 #: CRM/Utils/Check/Security.php
 msgid "Security Warning"
-msgstr "Veiligheidswaarschuwing"
+msgstr "Beveiligingswaarschuwing"
 
 #: CRM/Utils/Check/Security.php
 msgid "File '%1' presents a security risk and should be deleted."
@@ -11767,7 +11767,7 @@ msgstr "Profiel zonder naam"
 
 #: js/model/crm.uf.js
 msgid "FIXME"
-msgstr "OPLOSSEN"
+msgstr "FIXME"
 
 #: js/model/crm.uf.js templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -12883,7 +12883,7 @@ msgstr "Dit veld wordt meestal gebruikt om een e-mailadres te markeren waarvan d
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Preferred Communication"
-msgstr "Voorkeur communicatie"
+msgstr "Communicatievoorkeur"
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid "Select the preferred method(s) of communicating with this contact."
@@ -13849,7 +13849,7 @@ msgstr "Sorry, de gevraagde informatie kon niet worden geladen van de server."
 #: templates/CRM/Contact/Form/Search/AdvancedCriteria.tpl
 #: templates/CRM/Contact/Page/View/Summary.js
 msgid "Network Error"
-msgstr "Fout bij netwerk"
+msgstr "Netwerkfout"
 
 #: templates/CRM/Contact/Form/Search/AdvancedCriteria.tpl
 #: templates/CRM/Contact/Form/Search/BasicCriteria.tpl
@@ -13995,7 +13995,7 @@ msgstr "zoek op groepstype"
 
 #: templates/CRM/Contact/Form/Search/Criteria/Basic.tpl
 msgid "Group Type(s)"
-msgstr "Groep type(s)"
+msgstr "Groepstype(s)"
 
 #: templates/CRM/Contact/Form/Search/Criteria/Basic.tpl
 msgid "search by group"
@@ -15826,7 +15826,7 @@ msgstr "Verwijder de groepsstatus (de groep behoort dan niet meer tot de verlope
 
 #: templates/CRM/Contact/Page/View/GroupContact.tpl
 msgid "loading"
-msgstr "laden"
+msgstr "bezig met laden"
 
 #: templates/CRM/Contact/Page/View/Log.tpl
 msgid "Change Log:"
@@ -16076,7 +16076,7 @@ msgstr "Rechtstreekse Debetinformatie"
 
 #: templates/CRM/Core/BillingBlock.tpl
 msgid "Credit Card Information"
-msgstr "Creditcard Informatie"
+msgstr "Creditcardinformatie"
 
 #: templates/CRM/Core/BillingBlock.tpl
 msgid ""
@@ -16146,7 +16146,7 @@ msgstr "Klik op \"Contact bewerken\" om %1 toe te voegen"
 
 #: templates/CRM/Custom/Form/CustomField.tpl
 msgid "Delete this file"
-msgstr "Verwijder dit bestand"
+msgstr "Dit bestand verwijderen"
 
 #: templates/CRM/Custom/Form/DeleteField.tpl
 msgid ""
@@ -17694,7 +17694,7 @@ msgstr "Ontvangers van de maling"
 
 #: templates/CRM/SMS/Form/Provider.tpl
 msgid "New Provider"
-msgstr "Nieuwe Provider"
+msgstr "Provider toevoegen"
 
 #: templates/CRM/SMS/Form/Provider.tpl
 msgid "Are you sure you would like to execute this job?"
@@ -18111,7 +18111,7 @@ msgstr "reCAPTCHA is ook niet beschikbaar wanneer een profiel gebruikt wordt bin
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid "Account Creation"
-msgstr "Account Aanmaken"
+msgstr "Account aanmaken"
 
 #: templates/CRM/UF/Form/Group.hlp
 msgid ""
@@ -18510,7 +18510,7 @@ msgstr "in overeenstemming"
 
 #: templates/CRM/common/Navigation.tpl
 msgid "Name/Email"
-msgstr "Naam/E-mail"
+msgstr "Naam/e-mail"
 
 #: templates/CRM/common/SocialNetwork.tpl
 msgid "Help spread the word"
@@ -18773,7 +18773,7 @@ msgstr "Dit  proces kan de database (structuur en inhoud) veranderen. In geval v
 msgid ""
 "Click 'Upgrade Now' if you are ready to proceed. Otherwise click 'Cancel' to"
 " return to the CiviCRM home page."
-msgstr "Kies 'Nu bijwerken' als u wilt doorgaan. Kies 'Annuleren' om naar de CiviCRM startpagina te gaan. "
+msgstr "Kies 'Nu bijwerken' als u wilt doorgaan. Kies 'Annuleren' om naar de CiviCRM-startpagina te gaan. "
 
 #: templates/CRM/common/success.tpl
 msgid "Upgrade Now"
@@ -19489,19 +19489,19 @@ msgstr "Wijzig aangepaste gegevens"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Change Membership Status"
-msgstr "Wijzig Lidmaatschapsstatus"
+msgstr "Wijzig lidmaatschapsstatus"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Change Membership Status."
-msgstr "Wijzig Lidmaatschapsstatus."
+msgstr "Wijzig lidmaatschapsstatus."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Change Membership Type"
-msgstr "Wijzig Lidmaatschapstype"
+msgstr "Wijzig lidmaatschapstype"
 
 #: xml/templates/civicrm_data.tpl
 msgid "Change Membership Type."
-msgstr "Wijzig Lidmaatschapstype."
+msgstr "Wijzig lidmaatschapstype."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Cancel Recurring Contribution"
@@ -21303,14 +21303,14 @@ msgstr "Geeft gereserveerde enquête deelnemers vrij wanneer zij langer gereserv
 
 #: xml/templates/civicrm_data.tpl
 msgid "Clean-up Temporary Data and Files"
-msgstr "Schonen tijdelijke gegevens"
+msgstr "Tijdelijke gegevens opschonen"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
 "Removes temporary data and files, and clears old data from cache tables. "
 "Recommend running this job every hour to help prevent database and file "
 "system bloat."
-msgstr "Verwijdert tijdelijke gegevens en bestanden, ook uit de cache. Het wordt aanbevolen om dit zeker dagelijks te doen om de database en het systeem te ontlasten."
+msgstr "Verwijdert tijdelijke gegevens en bestanden, en oude data uit de cache-tabellen. Het wordt aanbevolen deze taak ieder uur uit te voeren om te voorkomen dat deze het systeem belasten."
 
 #: xml/templates/civicrm_data.tpl
 msgid "Send Scheduled SMS"
@@ -21334,7 +21334,7 @@ msgstr "limit=optioneel getal - Limiet voor het aantal smartgroepen dat per keer
 
 #: xml/templates/civicrm_data.tpl
 msgid "Disable expired relationships"
-msgstr "Uitschakelen verlopen relaties"
+msgstr "Verlopen relaties uitschakelen"
 
 #: xml/templates/civicrm_data.tpl
 msgid ""
@@ -21492,7 +21492,7 @@ msgstr "Toezeggingen - Bevestigen"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Pledges - Payment Reminder"
-msgstr "Toezeggingen - Herinnering Betaling"
+msgstr "Toezeggingen - Betalingsherinnering"
 
 #: xml/templates/civicrm_msg_template.tpl
 msgid "Profiles - Admin Notification"
@@ -23338,7 +23338,7 @@ msgstr "Contact B"
 
 #: CRM/Contact/DAO/Relationship.php
 msgid "Relationship Case"
-msgstr "Relatieschap Dossier"
+msgstr "Dossier relatie"
 
 #: CRM/Contact/Form/CustomData.php
 msgid "The maximum record limit is reached"
@@ -23358,7 +23358,7 @@ msgstr "Delen met"
 
 #: CRM/Contact/Form/Merge.php
 msgid "Cannot merge a contact with itself."
-msgstr "Een contact kan niet samenvoegt worden met zichzelf."
+msgstr "Een contact kan niet samengevoegd worden met zichzelf."
 
 #: CRM/Contact/Form/Merge.php
 msgid ""
@@ -23908,7 +23908,7 @@ msgstr "Is e-mail voor factuur?"
 
 #: CRM/Core/DAO/Extension.php
 msgid "Extension ID"
-msgstr "Extensie ID"
+msgstr "Extensie-ID"
 
 #: CRM/Core/DAO/Extension.php
 msgid "Extension is Active?"
@@ -26433,7 +26433,7 @@ msgstr "Weet u zeker dat u dit wilt verwijderen"
 
 #: templates/CRM/Activity/Form/ActivityLinks.tpl
 msgid "New Activity"
-msgstr "Nieuwe activiteit"
+msgstr "Activiteit toevoegen"
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid ""
@@ -26445,7 +26445,7 @@ msgstr "Gebruik dit filter om de zoekresultaten te beperken tot de contacten die
 
 #: templates/CRM/Contact/Form/Search/Criteria/Basic.tpl
 msgid "Search Settings"
-msgstr "Instellingen zoeken"
+msgstr "Zoekinstellingen"
 
 #: templates/CRM/Contact/Form/Task/AddToHousehold.tpl
 #: templates/CRM/Contact/Form/Task/AddToOrganization.tpl
@@ -26579,7 +26579,7 @@ msgstr "voorkomens"
 
 #: templates/CRM/Core/Form/RecurringEntity.tpl
 msgid "Already selected"
-msgstr "Al geselectereerd"
+msgstr "Al geselecteerd"
 
 #: templates/CRM/Core/Page/RecurringEntityPreview.tpl
 msgid ""
