po: update po/nl_NL/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 21:53+0000\n"
+"PO-Revision-Date: 2016-04-11 03:20+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -131,7 +131,7 @@ msgstr "Knop URL"
 
 #: CRM/Admin/Form/PaymentProcessor.php CRM/Financial/DAO/PaymentProcessor.php
 msgid "API URL"
-msgstr "API URL"
+msgstr "API-URL"
 
 #: CRM/Admin/Form/PaymentProcessorType.php
 #: CRM/Financial/DAO/PaymentProcessor.php
@@ -528,7 +528,7 @@ msgstr "Voer a.u.b. een geldig bedrag in (bijv. %1)."
 #: CRM/Campaign/Form/Petition.php
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
 msgid "Thank-you Page Title"
-msgstr "Bedankpagina titel"
+msgstr "Titel bedankpagina"
 
 #: CRM/Campaign/Form/Petition.php
 #: CRM/Contribute/Form/ContributionPage/Settings.php
@@ -1045,7 +1045,7 @@ msgstr "Cumulatief"
 #: CRM/Financial/Form/BatchTransaction.php
 #: CRM/Financial/Page/BatchTransaction.php
 msgid "View Contribution"
-msgstr "Toon bijdrage"
+msgstr "Bijdrage tonen"
 
 #: CRM/Contribute/Page/Tab.php CRM/Member/Page/Tab.php
 msgid "Change Billing Details"
@@ -1641,7 +1641,7 @@ msgstr "Bijdrage ter ere van %1"
 #: xml/templates/message_templates/membership_offline_receipt_html.tpl
 #: xml/templates/message_templates/membership_offline_receipt_text.tpl
 msgid "Thanks for your support."
-msgstr "Bedankt voor uw ondersteuning."
+msgstr "Bedankt voor uw steun."
 
 #: xml/templates/message_templates/contribution_offline_receipt_html.tpl
 #: xml/templates/message_templates/contribution_offline_receipt_text.tpl
@@ -1956,7 +1956,7 @@ msgstr "Kliks"
 
 #: CRM/Mailing/BAO/Query.php CRM/Report/Form/Mailing/Detail.php
 msgid "Delivery Status"
-msgstr "Afleveringsstatus"
+msgstr "Afleverstatus"
 
 #: CRM/Mailing/DAO/Component.php CRM/PCP/Form/Campaign.php
 msgid "Welcome"
@@ -2241,7 +2241,7 @@ msgstr "Factuuradres verplicht"
 #: CRM/Contribute/Form/ContributionPage/Settings.php
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "End date should be after Start date."
-msgstr "Einddatum moet na de startdatum liggen."
+msgstr "De einddatum moet na de startdatum liggen."
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 #: CRM/Report/Form/Instance.php
@@ -2378,4 +2378,4 @@ msgstr "Totaal toegezegd"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 #: CRM/Report/Form/Contribute/Recur.php
 msgid "Create Date"
-msgstr "Aanmaakdatum"
+msgstr "Aangemaakt op"
