--- a/po/nl_NL/campaign.po
+++ b/po/nl_NL/campaign.po
@@ -14,7 +14,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 21:51+0000\n"
+"PO-Revision-Date: 2016-04-11 03:19+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1151,7 +1151,7 @@ msgstr "Aanmaken type en status voor campagne, enquête en petitie"
 
 #: CRM/Campaign/Info.php
 msgid "manage campaign"
-msgstr "beheren campagne"
+msgstr "campagne beheren"
 
 #: CRM/Campaign/Info.php
 msgid "Create new campaigns, surveys and petitions, reserve respondents"
