--- a/po/nl_NL/case.po
+++ b/po/nl_NL/case.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-07 13:28+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-04-11 03:10+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -147,7 +147,7 @@ msgstr "Details activiteit %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Activity Auto Genrated %1 '%2'"
-msgstr "Automatisch genereerde activiteit %1 '%2'"
+msgstr "Automatisch gegenereerde activiteit %1 '%2'"
 
 #: CRM/Case/BAO/Query.php
 msgid "Role in Case  %1 '%2'"
@@ -592,7 +592,7 @@ msgstr "Kon niet opslaan in dossier"
 
 #: templates/CRM/Case/Form/ActivityToCase.tpl
 msgid "Activity Filed"
-msgstr "Activiteit Vastgelegd"
+msgstr "Activiteit vastgelegd"
 
 #: templates/CRM/Case/Form/ActivityView.tpl
 msgid "all revisions"
