--- a/po/nl_NL/pledge.po
+++ b/po/nl_NL/pledge.po
@@ -7,12 +7,13 @@
 # HanV <han.velthuis@home.nl>, 2012
 # HanV <han.velthuis@home.nl>, 2011-2012
 # Jeroen Groothuismink <jeroengroothuismink@gmail.com>, 2012
+# Kevin Levie <kevin@levity.nl>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-15 15:53+0000\n"
+"PO-Revision-Date: 2016-04-11 03:16+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -622,7 +623,7 @@ msgstr "<a href='%1'>Geplande betaling bewerken</a>"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
-msgstr "Betaling Herinnering"
+msgstr "Betalingsherinneringen"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
