po: update po/nl_NL/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/report.po
+++ b/po/nl_NL/report.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-11 13:45+0000\n"
+"PO-Revision-Date: 2016-04-11 03:18+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -268,7 +268,7 @@ msgstr "Overzicht van de dagen met activiteiten van type"
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Total Number of Cases "
-msgstr "Aantal Dossiers "
+msgstr "Aantal dossiers "
 
 #: CRM/Report/Form/Case/Detail.php
 msgid "Total Number of Countries "
@@ -384,7 +384,7 @@ msgstr "Log-type"
 #: CRM/Report/Form/Contact/LoggingSummary.php
 #: CRM/Report/Form/Contribute/LoggingSummary.php
 msgid "Altered Contact"
-msgstr "Gewijzigd Contact"
+msgstr "Gewijzigd contact"
 
 #: CRM/Report/Form/Contact/LoggingSummary.php
 msgid "Log Type Table"
@@ -621,7 +621,7 @@ msgstr "Is kalenderjaar"
 #: CRM/Report/Form/Contribute/History.php
 #: CRM/Report/Form/Contribute/Lybunt.php CRM/Report/Form/Contribute/Sybunt.php
 msgid "Fiscal Year Starting"
-msgstr "Begin fiscaal Jaar "
+msgstr "Begin fiscaal jaar "
 
 #: CRM/Report/Form/Contribute/History.php
 #: CRM/Report/Form/Contribute/Lybunt.php CRM/Report/Form/Contribute/Sybunt.php
@@ -843,7 +843,7 @@ msgstr "Bijdragen gem."
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Contributions Count"
-msgstr "Bijdragen aantal"
+msgstr "Aantal bijdragen"
 
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Soft Credit Amount Stats"
@@ -988,7 +988,7 @@ msgstr "Bijdrage Valuta"
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "View Participant Record"
-msgstr "Toon Deelnemer"
+msgstr "Deelnemer tonen"
 
 #: CRM/Report/Form/Event/Summary.php
 msgid "View Event Income For this Event"
@@ -1198,7 +1198,7 @@ msgstr "Klik door URL"
 
 #: CRM/Report/Form/Mailing/Clicks.php
 msgid "Click Count"
-msgstr "Klik Teller"
+msgstr "Aantal klikken"
 
 #: CRM/Report/Form/Mailing/Clicks.php
 msgid "Clicks: %1"
@@ -1234,7 +1234,7 @@ msgstr "Geopend Teller"
 
 #: CRM/Report/Form/Mailing/Opened.php
 msgid "Mail Opened: %1"
-msgstr "Mail Geopend: %1"
+msgstr "E-mail geopend: %1"
 
 #: CRM/Report/Form/Mailing/Summary.php
 msgid "Date Created"
@@ -1620,7 +1620,7 @@ msgstr "Het rapport is bijgevoegd als een CSV-bestand."
 
 #: CRM/Report/Form.php
 msgid "The report is attached as a PDF file."
-msgstr "Het rapport is toegevoegd als PDF."
+msgstr "Het rapport is bijgevoegd als een PDF-bestand."
 
 #: CRM/Report/Form.php
 msgid "Report mail has been sent."
@@ -1680,7 +1680,7 @@ msgstr "Nieuw %1 Rapport"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "New Report"
-msgstr "Nieuw Rapport"
+msgstr "Nieuw rapport"
 
 #: CRM/Report/Page/Options.php
 msgid "Registered Templates"
@@ -1751,7 +1751,7 @@ msgstr "Rapport Filters"
 
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "All Grants"
-msgstr "Alle Toelagen"
+msgstr "Alle toelagen"
 
 #: templates/CRM/Report/Form/Grant/Statistics.tpl
 msgid "Statistics Breakdown"
@@ -2112,7 +2112,7 @@ msgstr "Contact subtype (contact A)"
 
 #: CRM/Report/Form/Contact/Relationship.php
 msgid "Contact Subtype (Contact B)"
-msgstr "Contact subtype (contact B)"
+msgstr "Contactsubtype (contact B)"
 
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Total Amount (Contributions)"
@@ -2122,7 +2122,7 @@ msgstr "Totaalbedrag (Bijdragen)"
 #: CRM/Report/Form/Contribute/SoftCredit.php
 #: CRM/Report/Form/Contribute/Summary.php CRM/Report/Form/Member/Summary.php
 msgid "Total Contributions"
-msgstr "Aantal Bijdragen"
+msgstr "Aantal bijdragen"
 
 #: CRM/Report/Form/Contribute/PCP.php
 msgid "Supporter Contact Subtype"
@@ -2175,7 +2175,7 @@ msgstr "Filters"
 
 #: CRM/Report/Form.php
 msgid "Display Options"
-msgstr "Weergave opties"
+msgstr "Weergave-opties"
 
 #: CRM/Report/Form.php
 msgid "Sorting"
