--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,7 +21,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-11 17:09+0000\n"
+"PO-Revision-Date: 2016-04-11 03:22+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -452,7 +452,7 @@ msgstr "Achtervoegsels (Jr., Sr., enz.)"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Location Types (Home, Work...)"
-msgstr "Locatietypes (Thuis, Werk, enz.)"
+msgstr "Locatietypes (thuis, werk, enz.)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -471,7 +471,7 @@ msgstr "Mobiele providers"
 
 msgctxt "menu"
 msgid "Phone Type"
-msgstr "Type telefoonnummer"
+msgstr "Telefoontype"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -868,7 +868,7 @@ msgstr "Dashlet Activiteiten"
 
 msgctxt "menu"
 msgid "CiviCRM Blog"
-msgstr "CiviCRM Blog"
+msgstr "CiviCRM-blog"
 
 msgctxt "menu"
 msgid "Case Dashlet"
