--- a/po/nl_NL/install.po
+++ b/po/nl_NL/install.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:24-0500\n"
-"PO-Revision-Date: 2016-02-15 15:57+0000\n"
+"PO-Revision-Date: 2016-04-11 03:03+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -447,7 +447,7 @@ msgstr "<a %1>Zie de online documentatie voor meer informatie</a>"
 
 #: install/template.html
 msgid "CiviCRM Installer"
-msgstr "CiviCRM Installatie-programma"
+msgstr "CiviCRM installeren"
 
 #: install/template.html
 msgid "Version %1"
