--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-02-22 02:39+0000\n"
+"PO-Revision-Date: 2016-04-11 03:16+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -587,11 +587,11 @@ msgstr "Het gevraagde Profiel (gid=%1) is uitgeschakeld OF niet ingesteld om geb
 
 #: drupal/civicrm.module
 msgid "View Contact Record"
-msgstr "Toon Contact Kaart"
+msgstr "Contact tonen"
 
 #: drupal/civicrm.module
 msgid "View Contact Dashboard"
-msgstr "Toon Contact Overzicht"
+msgstr "Contact-dashboard tonen"
 
 #: drupal/civicrm.module
 msgid "Edit '!1'"
@@ -692,7 +692,7 @@ msgstr "CiviGroup Rollen Sync is geïnstalleerd. U moet !1 nog sync regels opgev
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Contacts"
-msgstr "CiviCRM Contacten"
+msgstr "CiviCRM-contacten"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "View displays CiviCRM Contacts, of people, organizations, etc."
@@ -708,11 +708,11 @@ msgstr "Drupal ID"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Relates a CiviCRM Contact to the Druapl User Record"
-msgstr "Legt een verband tussen een CiviCRM Contact en een Drupal gebruikersrecord"
+msgstr "Koppelt een CiviCRM-contact aan een Drupal-gebruiker"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Drupal User"
-msgstr "Drupal gebruiker"
+msgstr "Drupal-gebruiker"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Sort Name"
@@ -993,11 +993,11 @@ msgstr "Telefoonnummer"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "Phone Type"
-msgstr "Type telefoon"
+msgstr "Telefoontype"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Type, either Phone, Mobile, Fax or Pager"
-msgstr "Het type nummer: telefoon, GSM, Fax of Pager"
+msgstr "Het type nummer: vaste telefoon, mobiel of fax"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM Website"
@@ -2330,7 +2330,7 @@ msgstr "toon"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_mailing_name.inc
 msgid "Mailing Name"
-msgstr "Mailing Naam"
+msgstr "Naam mailing"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_event.inc
 msgid "Link to Registration Page"
@@ -2400,7 +2400,7 @@ msgstr "Link naar Deelnemers aan evenement"
 
 #: drupal/modules/views/civicrm/civicrm_handler_filter_phone_type.inc
 msgid "Phone type"
-msgstr "Telefoon type"
+msgstr "Telefoontype"
 
 #: drupal/modules/views/civicrm/civicrm_handler_field_link_activity.inc
 msgid "Link to View Activity"
@@ -2621,7 +2621,7 @@ msgstr "Kies hieronder een CiviMember Lidmaatschapstype en een Drupal rol. Dit z
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Select a CiviMember Membership Type"
-msgstr "Kies een CiviMember Lidmaatschapstype"
+msgstr "Kies een CiviMember-lidmaatschapstype"
 
 #: drupal/modules/civicrm_member_roles/civicrm_member_roles.module
 msgid "Select a Drupal Role"
@@ -2904,7 +2904,7 @@ msgstr "Interviewer niet gevonden."
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "Street Number"
-msgstr "Straatnummer"
+msgstr "Huisnummer"
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Search/Custom/FindVoters.php
 msgid "City"
