--- a/po/nl_NL/pcp.po
+++ b/po/nl_NL/pcp.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-22 21:51+0000\n"
+"PO-Revision-Date: 2016-04-11 03:10+0000\n"
 "Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -339,7 +339,7 @@ msgstr "De campagnepagina '%1' is verwijderd."
 
 #: CRM/PCP/Form/PCP.php
 msgid "Page Deleted"
-msgstr "Pagina Verwijderd"
+msgstr "Pagina verwijderd"
 
 #: CRM/PCP/Form/PCP.php
 msgid "The Campaign Page '%1' has been disabled."
