po: update po/nl_NL/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -17,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-07 13:29+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-04-11 03:18+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2204,7 +2204,7 @@ msgstr "Optionele voettekst voor het bedankscherm (wordt vaak gebruikt voor link
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid "Confirmation Email"
-msgstr "Bevestiging E-mail"
+msgstr "Bevestigingsmail"
 
 #: templates/CRM/Event/Form/ManageEvent/Registration.tpl
 msgid ""
@@ -3352,7 +3352,7 @@ msgstr "Wachtlijst bevestiging"
 #: xml/templates/message_templates/participant_cancelled_html.tpl
 #: xml/templates/message_templates/participant_cancelled_text.tpl
 msgid "Your Event Registration has been cancelled."
-msgstr "Uw deelname aan dit evenement is succesvol verwijderd."
+msgstr "Uw deelname aan dit evenement is geannuleerd."
 
 #: xml/templates/message_templates/participant_cancelled_html.tpl
 #: xml/templates/message_templates/participant_cancelled_text.tpl
@@ -3757,7 +3757,7 @@ msgstr "Deelnemersrol ID"
 
 #: CRM/Event/Form/ManageEvent/EventInfo.php
 msgid "Include Map to Event Location"
-msgstr "Landkaart met locatie toevoegen"
+msgstr "Kaart met locatie toevoegen"
 
 #: CRM/Event/Form/Participant.php
 msgid "%1 : Offline registration (by %2)"
