po: update po/nl_NL/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -14,8 +14,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-10 19:51+0000\n"
-"Last-Translator: HanV <han.velthuis@home.nl>\n"
+"PO-Revision-Date: 2016-04-11 02:22+0000\n"
+"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,7 +29,7 @@ msgstr "Het mailingonderdeel '%1' is opgeslagen."
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "CiviMail will not send email to a non-existent contact: %1"
-msgstr "CiviMail verzend geen e-mail aan een niet bestaand contact: %1"
+msgstr "CiviMail zal geen e-mail versturen aan een niet-bestaand contact: %1"
 
 #: CRM/Mailing/BAO/Mailing.php
 msgid "CiviMail will not send an empty mail body, Skipping: %1"
@@ -266,11 +266,11 @@ msgstr "Mailing gemaakt op"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Scheduled Date"
-msgstr "Mailing Datum Gepland"
+msgstr "Mailing gepland op"
 
 #: CRM/Mailing/DAO/Mailing.php
 msgid "Mailing Approved Date"
-msgstr "Mailing Datum Goedkeuring"
+msgstr "Mailing goedgekeurd op"
 
 #: CRM/Mailing/DAO/Mailing.php CRM/Mailing/Form/Approve.php
 msgid "Approval Status"
@@ -310,7 +310,7 @@ msgstr "Berichtkop"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Body"
-msgstr "Hoofdtekst"
+msgstr "Berichtinhoud"
 
 #: CRM/Mailing/DAO/Spool.php
 msgid "Added At"
@@ -369,11 +369,11 @@ msgstr "Notitie bij keuring"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Body - TEXT Format"
-msgstr "Hoofdtekst - platte tekst-opmaak"
+msgstr "Berichtinhoud - platte tekst"
 
 #: CRM/Mailing/Form/Component.php
 msgid "Body - HTML Format"
-msgstr "Hoofdtekst - HTML-opmaak"
+msgstr "Berichtinhoud - HTML"
 
 #: CRM/Mailing/Form/Component.php
 msgid ""
@@ -464,7 +464,7 @@ msgstr "Klik op 'Doorgaan' om er verder aan te werken."
 #: CRM/Mailing/Form/Settings.php CRM/Mailing/Form/Test.php
 #: CRM/Mailing/Form/Upload.php
 msgid "Mailing Saved"
-msgstr "Mailing Opgeslagen"
+msgstr "Mailing opgeslagen"
 
 #: CRM/Mailing/Form/Group.php
 msgid "Cannot have same mail in Include mailing(s) and Exclude mailing(s)."
@@ -824,7 +824,7 @@ msgstr "Mailing Ontvanger"
 
 #: CRM/Mailing/Selector/Search.php templates/CRM/Mailing/Form/Task/Print.tpl
 msgid "Completed Date"
-msgstr "Datum gereed"
+msgstr "Voltooid op"
 
 #: CRM/Mailing/Selector/Search.php
 msgid "CiviCRM Mailing Search"
@@ -1314,7 +1314,7 @@ msgstr " OF U kunt zoeken in de <a href='%1'>gearchiveerde  %2</a>"
 
 #: templates/CRM/Mailing/Page/Component.tpl
 msgid "Body HTML"
-msgstr "Hoofdtekst HTML"
+msgstr "HTML-berichtinhoud"
 
 #: templates/CRM/Mailing/Page/Component.tpl
 msgid "Add Mailing Component"
@@ -1625,7 +1625,7 @@ msgstr "Mailing Uitschrijving ID"
 
 #: CRM/Mailing/Event/DAO/Confirm.php
 msgid "Confirm Timestamp"
-msgstr "Bevestig tijdstempel"
+msgstr "Bevestigd op"
 
 #: CRM/Mailing/Event/DAO/Subscribe.php
 msgid "Mailing Subscribe Group"
