--- a/po/sv_SE/queue.po
+++ b/po/sv_SE/queue.po
@@ -4,14 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Isak Bergdahl <jahve@rocketmail.com>, 2012
+# Jonathan S <jonathan.c.strom@gmail.com>, 2016
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-07-01 22:23+0000\n"
-"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
-"Language-Team: Swedish (http://www.transifex.com/projects/p/civicrm/language/sv/)\n"
+"POT-Creation-Date: 2015-12-09 21:23-0500\n"
+"PO-Revision-Date: 2016-04-11 09:08+0000\n"
+"Last-Translator: Jonathan S <jonathan.c.strom@gmail.com>\n"
+"Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -20,20 +21,20 @@ msgstr ""
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue Name"
-msgstr "Kö-namn"
+msgstr "Könamn"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Submit Time"
-msgstr "Tid för inskickande"
+msgstr "Tid inskickad"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Release Time"
-msgstr "Tid för utgåvan"
+msgstr "Utgivningsdatum"
 
 #: CRM/Queue/DAO/QueueItem.php
 msgid "Queue item datas"
-msgstr ""
+msgstr "Kö objektdata"
 
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
-msgstr ""
+msgstr "Kö Springare"
