po: update po/sv_SE/batch.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/batch.po
+++ b/po/sv_SE/batch.po
@@ -4,14 +4,15 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Isak Bergdahl <jahve@rocketmail.com>, 2013
+# Jonathan S <jonathan.c.strom@gmail.com>, 2016
 # Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>, 2015
 # Thomas Nilsson <thomas.nilsson@responsive.se>, 2012,2014-2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-03-21 14:27+0000\n"
-"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
+"PO-Revision-Date: 2016-04-11 09:01+0000\n"
+"Last-Translator: Jonathan S <jonathan.c.strom@gmail.com>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -29,31 +30,31 @@ msgstr "Transaktioner"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "View/Add Transactions to Batch"
-msgstr ""
+msgstr "Se/Lägg till transaktioner till sats"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Re-open Batch"
-msgstr ""
+msgstr "Återuppta sats"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Download Batch"
-msgstr ""
+msgstr "Ladda ner sats"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Enter records"
-msgstr ""
+msgstr "Lägg till uppgifter"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Batch Data Entry"
-msgstr ""
+msgstr "Sats Datainmatning"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "Expected Total"
-msgstr "Förväntad total"
+msgstr "Förväntad Total"
 
 #: CRM/Batch/BAO/Batch.php
 msgid "No batches were selected."
-msgstr ""
+msgstr "Inga satser var markerade."
 
 #: CRM/Batch/BAO/Batch.php
 msgid "No export format selected."
@@ -61,7 +62,7 @@ msgstr "Inget exportformat valt."
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Exported Date"
-msgstr "Datum för export"
+msgstr "Datum Exporterad"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Number of items"
@@ -69,19 +70,19 @@ msgstr "Antal objekt"
 
 #: CRM/Batch/Form/Batch.php
 msgid "Batch Deleted"
-msgstr ""
+msgstr "Sats Borttagen"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Profile for bulk data entry is missing."
-msgstr ""
+msgstr "Profil för massinmatning av data saknas."
 
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Data Entry for Contributions"
-msgstr ""
+msgstr "Satsvis datainmatning för Bidrag"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Data Entry for Memberships"
-msgstr ""
+msgstr "Satsvis datainmatning för medlemsskap"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Ignore Mismatch & Process the Batch?"
@@ -97,7 +98,7 @@ msgstr "En del fält har uteslutits."
 
 #: CRM/Batch/Form/Entry.php
 msgid "Soft credit amount should not be greater than the total amount"
-msgstr ""
+msgstr "Soft kreditbelopp bör inte vara större än den totala mängden"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Membership type is a required field."
@@ -106,11 +107,11 @@ msgstr "Medlemstyp är ett obligatoriskt fält."
 #: CRM/Batch/Form/Entry.php templates/CRM/Batch/Form/Entry.tpl
 msgid ""
 "Total for amounts entered below does not match the expected batch total."
-msgstr "Summan av beloppen som angivits nedan stämmer inte överens med den bearbetningssatsens förväntade summa."
+msgstr "Summan av beloppen som angivits nedan stämmer inte överens med bearbetningssatsens förväntade summa."
 
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Processed."
-msgstr "Satsen bearbetad."
+msgstr "Satsen Bearbetad."
 
 #: CRM/Batch/Page/Batch.php
 msgid "Batch Processing"
@@ -118,21 +119,21 @@ msgstr "Satsvis bearbetning"
 
 #: templates/CRM/Batch/Form/Batch.tpl
 msgid "Delete Data Entry Batch"
-msgstr ""
+msgstr "Ta bort datainmatnings-sats"
 
 #: templates/CRM/Batch/Form/Batch.tpl
 msgid "Edit Data Entry Batch"
-msgstr ""
+msgstr "Ändra datainmatnings-sats"
 
 #: templates/CRM/Batch/Form/Batch.tpl templates/CRM/Batch/Form/Search.tpl
 msgid "New Data Entry Batch"
-msgstr ""
+msgstr "Ny datainmatnings-sats"
 
 #: templates/CRM/Batch/Form/Batch.tpl
 msgid ""
 "WARNING: Deleting this batch will result in the loss of all data entered for"
 " the batch."
-msgstr "VARNING: Om en bearbetningssats tas bort så kommer alla data som matas in i satsen försvinna."
+msgstr "VARNING: Om en bearbetningssats tas bort så kommer alla data som matats in i satsen försvinna."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid ""
@@ -140,19 +141,19 @@ msgid ""
 "You can also Save & Continue Later at any time. Go to Administer > Customize"
 " Data and Screens > Profiles > Reserved Profiles > to add, remove or change "
 "the order of columns."
-msgstr ""
+msgstr "Klicka på Validera & Bearbeta nedan när du har angett alla poster för bearbetningssatsen. Du kan också spara och fortsätta senare när som helst. Gå till Administer > Customize Data and Screens > Profiles > Reserved Profiles > för att lägga till, ta bort eller ändra ordning på kolumnerna."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid "Total amount expected"
-msgstr "Totalt förväntade"
+msgstr "Totalt belopp förväntad"
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid "Total amount entered"
-msgstr "Totalt inmatade"
+msgstr "Totalt belopp inmatad"
 
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Data Entry Batches"
-msgstr ""
+msgstr "Datainmatnings-satser"
 
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "Complete OR partial batch name."
@@ -160,76 +161,76 @@ msgstr "Fullständig ELLER del av bearbetningssatsens namn."
 
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "No matching Data Entry Batches found for your search criteria."
-msgstr ""
+msgstr "Inga satser för inmatning av data kunde hittas med angivna sökvillkor."
 
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "You do not have any Open Data Entry Batches."
-msgstr ""
+msgstr "Du har inga öppna satser med bearbetningsdata."
 
 #: templates/CRM/Batch/Form/Search.tpl
 msgid "No Data Entry Batches have been created for this site."
-msgstr ""
+msgstr "Inga bearbetningssatser har skapats för denna webbplats."
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch ID"
-msgstr ""
+msgstr "Sats ID"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Title"
-msgstr ""
+msgstr "Sats Titel"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Description"
-msgstr ""
+msgstr "Sats Beskrivning"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Created By"
-msgstr ""
+msgstr "Satsen skapades av"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Created Date"
-msgstr ""
+msgstr "Sats skapad datum"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Modified By"
-msgstr ""
+msgstr "Sats ändrad av"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Modified Date"
-msgstr ""
+msgstr "Sats ändringsdatum"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Smart Group"
-msgstr ""
+msgstr "Sats Smart Grupp"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Total"
-msgstr ""
+msgstr "Sats Fullständig"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Number of Items"
-msgstr ""
+msgstr "Sats Antal Objekt"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Payment Instrument"
-msgstr ""
+msgstr "Sats betalningsverktyg"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Exported Date"
-msgstr ""
+msgstr "Sats Exporteringsdatum"
 
 #: CRM/Batch/DAO/Batch.php
 msgid "Batch Data"
-msgstr ""
+msgstr "Sats Data"
 
 #: CRM/Batch/Form/Entry.php
 msgid "Batch Data Entry for Pledge Payments"
-msgstr ""
+msgstr "Sats Inmatningsdata för utfästelse"
 
 #: CRM/Batch/Form/Entry.php
 msgid "You can not record two payments for the same pledge in a single batch."
-msgstr ""
+msgstr "Du kan inte registrera två betalningar för samma utfästelse i en enstaka sats."
 
 #: templates/CRM/Batch/Form/Entry.tpl
 msgid "Open Pledges (Due Date - Amount)"
-msgstr ""
+msgstr "Öppna Utfästelser (Slutdatum - Mängd)"
